# rust-toy-game

./: Cargo.toml  LICENSE  README.md
src/: achievements.rs  animation.rs  building.rs  character.rs  death_animation.rs  debug_display.rs  enemy.rs  env.rs  environment.rs  font_handler.rs  game.rs  health_bar.rs  hud.rs  inventory.rs  main.rs  map.rs  menu.rs  monster.rs  player.rs  player_stats.rs  position.rs  reward.rs  scaling.rs  stat.rs  status.rs  system.rs  texture_handler.rs  texture_holder.rs  traits.rs  utils.rs  vendor.rs  weapon.rs  widgets.rs  window.rs
src/enemies/: bat.rs  mod.rs  skeleton.rs
src/environment/: building.rs  mod.rs
src/weapons/: mod.rs  nothing.rs  sword.rs
