[package]
name = "game"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2018"

[dependencies]
# sdl2 = { version = "0.34", features = ["image", "ttf"] }
rand_chacha = "0.2"
rand = "0.7"
once_cell = "1.3"
egui_sdl2_gl = { version = "0.16", default-features = false, features = ["sdl2_image", "sdl2_ttf"] }
parry2d = "0.7"

[features]
debug_enemy = []
