[package]
name = "rust-toy-game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy_rapier2d = { version = "0.17.0", features = ["simd-stable"] }
bevy_egui = "0.16.1"
