[package]
name = "rust-toy-game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11"
bevy_rapier2d = { version = "0.22.0", features = ["simd-stable"] }
bevy_egui = "0.21.0"
bevy_prototype_lyon = "0.9"
once_cell = "1.17"
rand = "0.8"
rand_seeder = "0.2"
rand_pcg = "0.3.1"
futures-lite = "1.12.0"
